@@ -1,33 +1,5 @@
 package io.kestra.webserver.controllers.api;
 
-import com.google.common.collect.ImmutableMap;
-import io.kestra.core.junit.annotations.KestraTest;
-import io.kestra.core.junit.annotations.LoadFlows;
-import io.kestra.core.models.Label;
-import io.kestra.core.models.executions.Execution;
-import io.kestra.core.models.flows.Flow;
-import io.kestra.core.models.flows.FlowForExecution;
-import io.kestra.core.models.flows.check.Check;
-import io.kestra.core.models.property.Property;
-import io.kestra.core.models.tasks.TaskForExecution;
-import io.kestra.core.models.triggers.AbstractTriggerForExecution;
-import io.kestra.core.repositories.LocalFlowRepositoryLoader;
-import io.kestra.jdbc.JdbcTestUtils;
-import io.kestra.plugin.core.debug.Return;
-import io.kestra.webserver.responses.BulkResponse;
-import io.kestra.webserver.responses.PagedResults;
-import io.micronaut.core.type.Argument;
-import io.micronaut.http.*;
-import io.micronaut.http.client.annotation.Client;
-import io.micronaut.http.client.exceptions.HttpClientResponseException;
-import io.micronaut.http.client.multipart.MultipartBody;
-import io.micronaut.reactor.http.client.ReactorHttpClient;
-import jakarta.inject.Inject;
-import lombok.extern.slf4j.Slf4j;
-import org.junit.jupiter.api.Assertions;
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.condition.EnabledIfEnvironmentVariable;
-
 import java.io.File;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
@@ -41,10 +13,37 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.condition.EnabledIfEnvironmentVariable;
+
+import com.google.common.collect.ImmutableMap;
+
+import io.kestra.core.junit.annotations.KestraTest;
+import io.kestra.core.junit.annotations.LoadFlows;
+import io.kestra.core.models.executions.Execution;
+import io.kestra.core.models.flows.Flow;
+import io.kestra.core.models.flows.FlowForExecution;
+import io.kestra.core.models.flows.check.Check;
+import io.kestra.core.models.property.Property;
+import io.kestra.core.models.tasks.TaskForExecution;
+import io.kestra.core.models.triggers.AbstractTriggerForExecution;
+import io.kestra.core.repositories.ExecutionRepositoryInterface;
+import io.kestra.plugin.core.debug.Return;
+import io.kestra.webserver.responses.PagedResults;
+
+import io.micronaut.core.type.Argument;
+import io.micronaut.http.*;
+import io.micronaut.http.client.annotation.Client;
+import io.micronaut.http.client.exceptions.HttpClientResponseException;
+import io.micronaut.http.client.multipart.MultipartBody;
+import io.micronaut.reactor.http.client.ReactorHttpClient;
+import jakarta.inject.Inject;
+import lombok.extern.slf4j.Slf4j;
+
 import static io.kestra.core.tenant.TenantService.MAIN_TENANT;
 import static io.micronaut.http.HttpRequest.GET;
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
 @Slf4j
@@ -52,17 +51,14 @@ import static org.junit.jupiter.api.Assertions.assertThrows;
 class ExecutionControllerTest {
 
     @Inject
-    ExecutionController executionController;
+    private ExecutionController executionController;
+
+    @Inject
+    private ExecutionRepositoryInterface executionRepository;
 
     @Inject
     @Client("/")
-    ReactorHttpClient client;
-
-    @Inject
-    private JdbcTestUtils jdbcTestUtils;
-
-    @Inject
-    protected LocalFlowRepositoryLoader repositoryLoader;
+    private ReactorHttpClient client;
 
     public static final String TESTS_FLOW_NS = "io.kestra.tests";
     public static final String TESTS_WEBHOOK_KEY = "a-secret-key";
@@ -79,17 +75,20 @@ class ExecutionControllerTest {
 
     private MultipartBody createExecutionInputsFlowBody() {
         // Trigger execution
-        File applicationFile = new File(Objects.requireNonNull(
-            ExecutionControllerTest.class.getClassLoader().getResource("application-test.yml")
-        ).getPath());
+        File applicationFile = new File(
+            Objects.requireNonNull(
+                ExecutionControllerTest.class.getClassLoader().getResource("application-test.yml")
+            ).getPath()
+        );
 
-        File logbackFile = new File(Objects.requireNonNull(
-            ExecutionControllerTest.class.getClassLoader().getResource("logback.xml")
-        ).getPath());
+        File logbackFile = new File(
+            Objects.requireNonNull(
+                ExecutionControllerTest.class.getClassLoader().getResource("logback.xml")
+            ).getPath()
+        );
 
         return MultipartBody.builder()
             .addPart("string", "myString")
-            .addPart("enum", "ENUM_VALUE")
             .addPart("int", "42")
             .addPart("float", "42.42")
             .addPart("instant", "2019-10-06T18:27:49Z")
@@ -104,7 +103,8 @@ class ExecutionControllerTest {
 
     @Test
     void webhookFlowNotFound() {
-        HttpClientResponseException exception = assertThrows(HttpClientResponseException.class,
+        HttpClientResponseException exception = assertThrows(
+            HttpClientResponseException.class,
             () -> client.toBlocking().retrieve(
                 HttpRequest
                     .POST(
@@ -117,7 +117,8 @@ class ExecutionControllerTest {
         assertThat(exception.getStatus().getCode()).isEqualTo(HttpStatus.NOT_FOUND.getCode());
         assertThat(exception.getMessage()).contains("Not Found: Flow not found");
 
-        exception = assertThrows(HttpClientResponseException.class,
+        exception = assertThrows(
+            HttpClientResponseException.class,
             () -> client.toBlocking().retrieve(
                 HttpRequest
                     .PUT(
@@ -130,7 +131,8 @@ class ExecutionControllerTest {
         assertThat(exception.getStatus().getCode()).isEqualTo(HttpStatus.NOT_FOUND.getCode());
         assertThat(exception.getMessage()).contains("Not Found: Flow not found");
 
-        exception = assertThrows(HttpClientResponseException.class,
+        exception = assertThrows(
+            HttpClientResponseException.class,
             () -> client.toBlocking().retrieve(
                 HttpRequest
                     .POST(
@@ -143,7 +145,8 @@ class ExecutionControllerTest {
         assertThat(exception.getStatus().getCode()).isEqualTo(HttpStatus.NOT_FOUND.getCode());
         assertThat(exception.getMessage()).contains("Not Found: Flow not found");
 
-        exception = assertThrows(HttpClientResponseException.class,
+        exception = assertThrows(
+            HttpClientResponseException.class,
             () -> client.toBlocking().retrieve(
                 GET("/api/v1/main/executions/webhook/not-found/webhook/not-found?name=john&age=12&age=13"),
                 Execution.class
@@ -152,7 +155,8 @@ class ExecutionControllerTest {
         assertThat(exception.getStatus().getCode()).isEqualTo(HttpStatus.NOT_FOUND.getCode());
         assertThat(exception.getMessage()).contains("Not Found: Flow not found");
 
-        exception = assertThrows(HttpClientResponseException.class,
+        exception = assertThrows(
+            HttpClientResponseException.class,
             () -> client.toBlocking().retrieve(
                 HttpRequest
                     .POST(
@@ -167,12 +171,12 @@ class ExecutionControllerTest {
     }
 
     @Test
-    @LoadFlows(value = {"flows/valids/webhook-dynamic-key.yaml"})
+    @LoadFlows(value = { "flows/valids/webhook-dynamic-key.yaml" })
     void webhookDynamicKey() {
         Execution execution = client.toBlocking().retrieve(
             GET(
-                    "/api/v1/main/executions/webhook/" + TESTS_FLOW_NS + "/webhook-dynamic-key/webhook-dynamic-key"
-                ),
+                "/api/v1/main/executions/webhook/" + TESTS_FLOW_NS + "/webhook-dynamic-key/webhook-dynamic-key"
+            ),
             Execution.class
         );
 
@@ -181,13 +185,13 @@ class ExecutionControllerTest {
     }
 
     @Test
-    @LoadFlows(value = {"flows/valids/webhook-secret-key.yaml"})
+    @LoadFlows(value = { "flows/valids/webhook-secret-key.yaml" })
     @EnabledIfEnvironmentVariable(named = "SECRET_WEBHOOK_KEY", matches = ".*")
     void webhookDynamicKeyFromASecret() {
         Execution execution = client.toBlocking().retrieve(
             GET(
-                    "/api/v1/main/executions/webhook/" + TESTS_FLOW_NS + "/webhook-secret-key/secretKey"
-                ),
+                "/api/v1/main/executions/webhook/" + TESTS_FLOW_NS + "/webhook-secret-key/secretKey"
+            ),
             Execution.class
         );
 
@@ -196,9 +200,10 @@ class ExecutionControllerTest {
     }
 
     @Test
-    @LoadFlows(value = {"flows/valids/webhook-with-condition.yaml"})
+    @LoadFlows(value = { "flows/valids/webhook-with-condition.yaml" })
     void webhookWithCondition() {
-        record Hello(String hello) {}
+        record Hello(String hello) {
+        }
 
         Execution execution = client.toBlocking().retrieve(
             HttpRequest
@@ -227,9 +232,10 @@ class ExecutionControllerTest {
     }
 
     @Test
-    @LoadFlows(value = {"flows/valids/webhook-inputs.yaml"})
+    @LoadFlows(value = { "flows/valids/webhook-inputs.yaml" })
     void webhookWithInputs() {
-        record Hello(String hello) {}
+        record Hello(String hello) {
+        }
 
         Execution execution = client.toBlocking().retrieve(
             HttpRequest
@@ -246,9 +252,9 @@ class ExecutionControllerTest {
 
     @Test
     void resolveAbsoluteDateTime() {
-        final ZonedDateTime absoluteTimestamp = ZonedDateTime.of(2023, 2, 3, 4, 6,10, 0, ZoneId.systemDefault());
+        final ZonedDateTime absoluteTimestamp = ZonedDateTime.of(2023, 2, 3, 4, 6, 10, 0, ZoneId.systemDefault());
         final Duration offset = Duration.ofSeconds(5L);
-        final ZonedDateTime baseTimestamp = ZonedDateTime.of(2024, 2, 3, 5, 6,10, 0, ZoneId.systemDefault());
+        final ZonedDateTime baseTimestamp = ZonedDateTime.of(2024, 2, 3, 5, 6, 10, 0, ZoneId.systemDefault());
 
         assertThat(executionController.resolveAbsoluteDateTime(absoluteTimestamp, null, null)).isEqualTo(absoluteTimestamp);
         assertThat(executionController.resolveAbsoluteDateTime(null, offset, baseTimestamp)).isEqualTo(baseTimestamp.minus(offset));
@@ -285,7 +291,7 @@ class ExecutionControllerTest {
 
     @SuppressWarnings("DataFlowIssue")
     @Test
-    @LoadFlows(value = {"flows/valids/full.yaml"})
+    @LoadFlows(value = { "flows/valids/full.yaml" })
     void getExecutionFlowForExecution() {
         FlowForExecution result = client.toBlocking().retrieve(
             GET("/api/v1/main/executions/flows/io.kestra.tests/full"),
@@ -298,7 +304,7 @@ class ExecutionControllerTest {
     }
 
     @Test
-    @LoadFlows(value = {"flows/valids/full.yaml"})
+    @LoadFlows(value = { "flows/valids/full.yaml" })
     void getExecutionFlowForExecutionWithOldUrl() {
         FlowForExecution result = client.toBlocking().retrieve(
             GET("/api/v1/main/executions/flows/io.kestra.tests/full"),
@@ -312,7 +318,7 @@ class ExecutionControllerTest {
 
     @SuppressWarnings("DataFlowIssue")
     @Test
-    @LoadFlows(value = {"flows/valids/webhook.yaml"})
+    @LoadFlows(value = { "flows/valids/webhook.yaml" })
     void getExecutionFlowForExecutionById() {
         Execution execution = client.toBlocking().retrieve(
             HttpRequest
@@ -322,6 +328,7 @@ class ExecutionControllerTest {
                 ),
             Execution.class
         );
+        executionRepository.save(execution);
 
         FlowForExecution result = client.toBlocking().retrieve(
             GET("/api/v1/main/executions/" + execution.getId() + "/flow"),
@@ -335,7 +342,7 @@ class ExecutionControllerTest {
 
     @SuppressWarnings("unchecked")
     @Test
-    @LoadFlows(value = {"flows/valids/minimal.yaml"})
+    @LoadFlows(value = { "flows/valids/minimal.yaml" })
     void getExecutionDistinctNamespaceExecutables() {
         List<String> result = client.toBlocking().retrieve(
             GET("/api/v1/main/executions/namespaces"),
@@ -347,7 +354,7 @@ class ExecutionControllerTest {
 
     @SuppressWarnings("unchecked")
     @Test
-    @LoadFlows(value = {"flows/valids/webhook.yaml", "flows/valids/minimal.yaml"})
+    @LoadFlows(value = { "flows/valids/webhook.yaml", "flows/valids/minimal.yaml" })
     void getExecutionFlowFromNamespace() {
         List<FlowForExecution> result = client.toBlocking().retrieve(
             GET("/api/v1/main/executions/namespaces/io.kestra.tests/flows"),
@@ -359,98 +366,41 @@ class ExecutionControllerTest {
 
     @Test
     void badQueryFilters() {
-        HttpClientResponseException exception = assertThrows(HttpClientResponseException.class, () ->
-            client.toBlocking().retrieve(GET(
-                "/api/v1/main/executions/search?filters[triggerId][EQUALS]=test"), PagedResults.class));
+        HttpClientResponseException exception = assertThrows(
+            HttpClientResponseException.class, () -> client.toBlocking().retrieve(
+                GET(
+                    "/api/v1/main/executions/search?filters[triggerId][EQUALS]=test"
+                ), PagedResults.class
+            )
+        );
         assertThat(exception.getStatus().getCode()).isEqualTo(HttpStatus.BAD_REQUEST.getCode());
-        assertThat(exception.getMessage()).isEqualTo("Invalid query filters: Provided query filters are invalid: Field TRIGGER_ID is not supported for resource EXECUTION. Supported fields are QUERY, SCOPE, FLOW_ID, START_DATE, END_DATE, STATE, LABELS, TRIGGER_EXECUTION_ID, CHILD_FILTER, NAMESPACE, KIND");
+        assertThat(exception.getMessage()).isEqualTo(
+            "Invalid query filters: Provided query filters are invalid: Field TRIGGER_ID is not supported for resource EXECUTION. Supported fields are QUERY, SCOPE, FLOW_ID, START_DATE, END_DATE, STATE, LABELS, TRIGGER_EXECUTION_ID, CHILD_FILTER, NAMESPACE, KIND"
+        );
 
-        exception = assertThrows(HttpClientResponseException.class, () ->
-            client.toBlocking().retrieve(GET(
-                "/api/v1/main/executions/search?filters[startDate][EQUALS]=2024-06-03T00:00:00.000%2B02:00&filters[endDate][EQUALS]=2023-06-05T00:00:00.000%2B02:00"), PagedResults.class));
+        exception = assertThrows(
+            HttpClientResponseException.class, () -> client.toBlocking().retrieve(
+                GET(
+                    "/api/v1/main/executions/search?filters[startDate][EQUALS]=2024-06-03T00:00:00.000%2B02:00&filters[endDate][EQUALS]=2023-06-05T00:00:00.000%2B02:00"
+                ), PagedResults.class
+            )
+        );
         assertThat(exception.getStatus().getCode()).isEqualTo(422);
         assertThat(exception.getMessage()).isEqualTo("Illegal argument: Start date must be before End Date");
 
-        HttpClientResponseException exception_oldParameters = assertThrows(HttpClientResponseException.class, () ->
-            client.toBlocking().retrieve(GET(
-                "/api/v1/main/executions/search?startDate=2024-06-03T00:00:00.000%2B02:00&endDate=2023-06-05T00:00:00.000%2B02:00"), PagedResults.class));
+        HttpClientResponseException exception_oldParameters = assertThrows(
+            HttpClientResponseException.class, () -> client.toBlocking().retrieve(
+                GET(
+                    "/api/v1/main/executions/search?startDate=2024-06-03T00:00:00.000%2B02:00&endDate=2023-06-05T00:00:00.000%2B02:00"
+                ), PagedResults.class
+            )
+        );
         assertThat(exception_oldParameters.getStatus().getCode()).isEqualTo(422);
         assertThat(exception_oldParameters.getMessage()).isEqualTo("Illegal argument: Start date must be before End Date");
     }
 
     @Test
-    @LoadFlows(value = {"flows/valids/inputs.yaml"})
-    void commaInSingleLabelsValue() {
-        String encodedCommaWithinLabel = URLEncoder.encode("project:foo,bar", StandardCharsets.UTF_8);
-
-        MutableHttpRequest<Object> deleteRequest = HttpRequest
-            .DELETE("/api/v1/main/executions/by-query?labels=" + encodedCommaWithinLabel);
-        assertDoesNotThrow(() -> client.toBlocking().retrieve(deleteRequest, PagedResults.class));
-
-        MutableHttpRequest<List<Object>> restartRequest = HttpRequest
-            .POST("/api/v1/main/executions/restart/by-query?labels=" + encodedCommaWithinLabel, List.of());
-        assertDoesNotThrow(() -> client.toBlocking().retrieve(restartRequest, BulkResponse.class));
-
-        MutableHttpRequest<List<Object>> resumeRequest = HttpRequest
-            .POST("/api/v1/main/executions/resume/by-query?labels=" + encodedCommaWithinLabel, List.of());
-        assertDoesNotThrow(() -> client.toBlocking().retrieve(resumeRequest, BulkResponse.class));
-
-        MutableHttpRequest<List<Object>> replayRequest = HttpRequest
-            .POST("/api/v1/main/executions/replay/by-query?labels=" + encodedCommaWithinLabel, List.of());
-        assertDoesNotThrow(() -> client.toBlocking().retrieve(replayRequest, BulkResponse.class));
-
-        MutableHttpRequest<List<Object>> labelsRequest = HttpRequest
-            .POST("/api/v1/main/executions/labels/by-query?labels=" + encodedCommaWithinLabel, List.of());
-        assertDoesNotThrow(() -> client.toBlocking().retrieve(labelsRequest, BulkResponse.class));
-
-        MutableHttpRequest<List<Object>> killRequest = HttpRequest
-            .DELETE("/api/v1/main/executions/kill/by-query?labels=" + encodedCommaWithinLabel, List.of());
-        assertDoesNotThrow(() -> client.toBlocking().retrieve(killRequest, BulkResponse.class));
-
-        MutableHttpRequest<MultipartBody> triggerRequest = HttpRequest
-            .POST("/api/v1/main/executions/trigger/" + TESTS_FLOW_NS + "/inputs?labels=" + encodedCommaWithinLabel, createExecutionInputsFlowBody())
-            .contentType(MediaType.MULTIPART_FORM_DATA_TYPE);
-        assertThat(client.toBlocking().retrieve(triggerRequest, Execution.class).getLabels()).contains(new Label("project", "foo,bar"));
-
-        MutableHttpRequest<MultipartBody> createRequest = HttpRequest
-            .POST("/api/v1/main/executions/" + TESTS_FLOW_NS + "/inputs?labels=" + encodedCommaWithinLabel, createExecutionInputsFlowBody())
-            .contentType(MediaType.MULTIPART_FORM_DATA_TYPE);
-        assertThat(client.toBlocking().retrieve(createRequest, Execution.class).getLabels()).contains(new Label("project", "foo,bar"));
-
-        MutableHttpRequest<Object> searchRequest = HttpRequest
-            .GET("/api/v1/main/executions/search?filters[labels][EQUALS][project]=foo,bar");
-        assertThat(client.toBlocking().retrieve(searchRequest, PagedResults.class).getTotal()).isEqualTo(2L);
-
-        MutableHttpRequest<Object> searchRequest_oldParameters = HttpRequest
-            .GET("/api/v1/main/executions/search?labels=project:foo,bar");
-        assertThat(client.toBlocking().retrieve(searchRequest_oldParameters, PagedResults.class).getTotal()).isEqualTo(2L);
-
-        MutableHttpRequest<Object> searchRequest_triggerExecution = HttpRequest
-            .GET("/api/v1/executions/search?triggerExecutionId=test");
-        assertThat(client.toBlocking().retrieve(searchRequest_triggerExecution, PagedResults.class).getTotal()).isEqualTo(0L);
-    }
-
-    @Test
-    void commaInOneOfMultiLabels() {
-        String encodedCommaWithinLabel = URLEncoder.encode("project:foo,bar", StandardCharsets.UTF_8);
-        String encodedRegularLabel = URLEncoder.encode("status:test", StandardCharsets.UTF_8);
-
-        MutableHttpRequest<MultipartBody> createRequest = HttpRequest
-            .POST("/api/v1/main/executions/" + TESTS_FLOW_NS + "/inputs?labels=" + encodedCommaWithinLabel + "&labels=" + encodedRegularLabel, createExecutionInputsFlowBody())
-            .contentType(MediaType.MULTIPART_FORM_DATA_TYPE);
-        assertThat(client.toBlocking().retrieve(createRequest, Execution.class).getLabels()).contains(new Label("project", "foo,bar"), new Label("status", "test"));
-
-        MutableHttpRequest<Object> searchRequest = HttpRequest
-            .GET("/api/v1/main/executions/search?filters[labels][EQUALS][project]=foo,bar" + "&filters[labels][EQUALS][status]=test");
-        assertThat(client.toBlocking().retrieve(searchRequest, PagedResults.class).getTotal()).isEqualTo(1L);
-
-        MutableHttpRequest<Object> searchRequest_oldParameters = HttpRequest
-            .GET("/api/v1/main/executions/search?labels=project:foo,bar" + "&labels=status:test");
-        assertThat(client.toBlocking().retrieve(searchRequest_oldParameters, PagedResults.class).getTotal()).isEqualTo(1L);
-    }
-
-    @Test
-    @LoadFlows(value = {"flows/valids/minimal.yaml"})
+    @LoadFlows(value = { "flows/valids/minimal.yaml" })
     void scheduleDate() {
         // given
         ZonedDateTime now = ZonedDateTime.now().truncatedTo(ChronoUnit.SECONDS).plusSeconds(1);
@@ -492,7 +442,7 @@ class ExecutionControllerTest {
     }
 
     @Test
-    @LoadFlows(value = {"flows/valids/minimal.yaml"})
+    @LoadFlows(value = { "flows/valids/minimal.yaml" })
     void shouldHaveAnUrlWhenCreated() {
         // ExecutionController.ExecutionResponse cannot be deserialized because it didn't have any default constructor.
         // adding it would mean updating the Execution itself, which is too annoying, so for the test we just deserialize to a Map.
@@ -508,31 +458,18 @@ class ExecutionControllerTest {
     }
 
     @Test
-    @LoadFlows(value = {"flows/valids/minimal.yaml"})
+    @LoadFlows(value = { "flows/valids/minimal.yaml" })
     void shouldRefuseSystemLabelsWhenCreatingAnExecution() {
-        var error = assertThrows(HttpClientResponseException.class, () -> client.toBlocking().retrieve(
-            HttpRequest
-                .POST("/api/v1/main/executions/io.kestra.tests/minimal?labels=system.label:system", null)
-                .contentType(MediaType.MULTIPART_FORM_DATA_TYPE),
-            Execution.class
-        ));
-
-        assertThat(error.getStatus().getCode()).isEqualTo(HttpStatus.UNPROCESSABLE_ENTITY.getCode());
-    }
-
-    @Test
-    void exportExecutions() {
-        createAndExecuteFlow();
-
-        HttpResponse<byte[]> response = client.toBlocking().exchange(
-            HttpRequest.GET("/api/v1/main/executions/export/by-query/csv"),
-            byte[].class
+        var error = assertThrows(
+            HttpClientResponseException.class, () -> client.toBlocking().retrieve(
+                HttpRequest
+                    .POST("/api/v1/main/executions/io.kestra.tests/minimal?labels=system.label:system", null)
+                    .contentType(MediaType.MULTIPART_FORM_DATA_TYPE),
+                Execution.class
+            )
         );
 
-        assertThat(response.getStatus().getCode()).isEqualTo(HttpStatus.OK.getCode());
-        assertThat(response.getHeaders().get("Content-Disposition")).contains("attachment; filename=executions.csv");
-        String csv = new String(response.body());
-        assertThat(csv).contains("id");
+        assertThat(error.getStatus().getCode()).isEqualTo(HttpStatus.UNPROCESSABLE_ENTITY.getCode());
     }
 
     @Test
@@ -544,48 +481,26 @@ class ExecutionControllerTest {
 
         HttpClientResponseException e = assertThrows(
             HttpClientResponseException.class,
-            () ->
-                client.toBlocking().retrieve(
-                    HttpRequest.POST("/api/v1/main/executions/" + namespaceId + "/" + flowId, null),
-                    Execution.class
-                )
+            () -> client.toBlocking().retrieve(
+                HttpRequest.POST("/api/v1/main/executions/" + namespaceId + "/" + flowId, null),
+                Execution.class
+            )
         );
         assertThat(e.getMessage()).contains("No VM provided");
     }
 
     void createFlowWithFailingCheck(String namespaceId, String flowId) {
-         Flow create = Flow.builder()
-            .id(flowId)
-            .tenantId(MAIN_TENANT)
-            .namespace(namespaceId)
-            .checks(List.of(Check.builder().condition("{{ [] | length > 0 }}").message("No VM provided").style(Check.Style.ERROR).behavior(Check.Behavior.BLOCK_EXECUTION).build()))
-            .tasks(Collections.singletonList(Return.builder().id("test").type(Return.class.getName()).format(Property.of("test")).build()))
-            .build();
-
-        client.toBlocking().retrieve(
-            HttpRequest.POST("/api/v1/main/flows", create),
-            Flow.class
-        );
-    }
-
-    void createAndExecuteFlow() {
-        String namespaceId = "io.othercompany";
-        String flowId = "flowId";
         Flow create = Flow.builder()
             .id(flowId)
             .tenantId(MAIN_TENANT)
             .namespace(namespaceId)
-            .tasks(Collections.singletonList(Return.builder().id("test").type(Return.class.getName()).format(Property.of("test")).build()))
+            .checks(List.of(Check.builder().condition("{{ [] | length > 0 }}").message("No VM provided").style(Check.Style.ERROR).behavior(Check.Behavior.BLOCK_EXECUTION).build()))
+            .tasks(Collections.singletonList(Return.builder().id("test").type(Return.class.getName()).format(Property.ofValue("test")).build()))
             .build();
 
         client.toBlocking().retrieve(
-            HttpRequest.POST("/api/v1/main/flows", create),
+            HttpRequest.POST("/api/v1/main/flows", create.sourceOrGenerateIfNull()).contentType(MediaType.APPLICATION_YAML_TYPE),
             Flow.class
-        );
-
-        client.toBlocking().retrieve(
-            HttpRequest.POST("/api/v1/main/executions/" + namespaceId + "/" + flowId, null),
-            Execution.class
         );
     }
 
